--- a/style/style.css
+++ b/style/style.css
@@ -24,17 +24,24 @@ h2{
 }
 
 
+
 .demo-grid{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 1fr;
     gap: 1px 1px;
     text-align: center;
     font-size: 1.0rem;
-    font-family: Arial, Helvetica, sans-serif;
-    grid-template-areas: "banner1"
-    "demo1 demo2 demo3 demo4 ";
+    font-family: Arial, Helvetica, sans-serif;  
 }
+@media (max-width:768px){
+    .demo-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+}
+    
+
+
 .radio{
     padding: 50px;
 }
@@ -43,4 +50,20 @@ h2{
 .formulario{
     margin: 20px;
     padding: 20px;
+}
+
+.perfilPic{
+    margin-bottom: 20px;
+    justify-content: center;
+}
+.col-12{
+    margin-bottom: 163px;
+    padding-left: 30px;
+}
+h3{
+   
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    
 }
